# waypointer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
dev_tools/: POIs.csv  generate_test_waypoints.py  wahoo_poi_mapping.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: wahoo-callback.html
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: CandidateChecklist.tsx  FeedbackWidget.tsx  FindFountainsCard.tsx  FindPoisCard.tsx  ImportCard.tsx  PoiListItem.tsx  PoiTypeCombobox.tsx  RouteMap.tsx  RouteNameDialog.tsx  SaveCard.tsx  StatusMessage.tsx  StepCard.tsx  Toaster.tsx  WahooImportDialog.tsx  WahooProfileMenu.tsx  WahooRoutesDialog.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx  tabs.tsx  toast.tsx
frontend/src/lib/: api.ts  feedbackConfig.ts  geometry.ts  gpx.ts  mapIcons.tsx  poiTypes.ts  settings.ts  toast.ts  wahooApi.ts  wahooAuth.ts  wahooConfig.ts  wahooConnect.ts  wahooSettings.ts
frontend/src/types/: candidate.ts
src/waypointer/: device_profiles.py  fit_io.py  fit_read.py  geometry.py  gpx_io.py  main.py  osm.py  poi_types.py  rate_limit.py  schemas.py
tests/: conftest.py  test_api.py  test_device_profiles.py  test_fit_io.py  test_fit_read.py  test_geometry.py  test_gpx_io.py  test_osm.py  test_poi_types.py
tests/fixtures/: overpass_response.json  sample_route.gpx
