[project]
name = "waypointer"
version = "0.1.0"
description = "Add nearby OSM drinking water fountains as waypoints to a GPX file"
readme = "README.md"
authors = [
    { name = "SamDja", email = "samuelgiacomelli@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "fit-tool>=0.9.15",
    "gpxpy>=1.6.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "responses>=0.26.2",
]
